--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,11 @@ body, html {
 .main-page {
     display: flex;
     height: 100vh;
+    width: 100%;
+    flex-direction: row;
 }
+
+/* TEXT CLASSES */
 
 .text-container {
     display: flex;
@@ -22,14 +26,6 @@ body, html {
     position: absolute;
     left: 20px;
     padding: 20px;   
-}
-
-.photo-container {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
 }
 
 .top-right, .middle-right, .bottom-right {
@@ -48,7 +44,15 @@ body, html {
     line-height: 2em;
 }
 
+/* PHOTO CLASSES */
+
+.photo-container {
+    flex-grow: 1;
+    position: relative;
+}
+
 .img {
+    display: flex;
     width: 100%;
     height: 100%;
     object-fit: cover;
