--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,13 +6,17 @@ body, html {
     background-color: black;
     margin: 0;
     height: 100%;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
+
 
 .main-page {
     display: flex;
     height: 100vh;
     width: 100%;
     flex-direction: row;
+    
 }
 
 /* TEXT CLASSES */
@@ -22,10 +26,9 @@ body, html {
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-    width: auto;
-    position: absolute;
-    left: 20px;
-    padding: 20px;   
+    width: 300px; /* Fixed width for the text container */
+    position: relative;
+    padding: 20px;
 }
 
 .top-right, .middle-right, .bottom-right {
@@ -37,13 +40,25 @@ body, html {
     padding-bottom: 5px;
     flex: 0 0 auto;
     color:white;
+    /* increasing letter spacing */
+    letter-spacing: 0.01em;
 }
 
 .middle-right {
     margin: auto 0; /* This will center the middle-right element vertically */
-    line-height: 2em;
 }
 
+.top-right, .middle-right {
+    font-size: 1.75em;
+    /* bold font */
+    font-weight: 700;
+}
+
+.bottom-right {
+    font-size: 1.5em;
+    font-weight: 200;
+    font-style: italic;
+}
 /* PHOTO CLASSES */
 
 .photo-container {
@@ -56,4 +71,10 @@ body, html {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    padding: 20px;
+}
+
+.spacer {
+    width: 300px;
+    flex-shrink: 0;
 }
