added breakpoint settings

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,6 +75,46 @@ body, html {
 }
 
 .spacer {
-    width: 300px;
+    width: 200px;
     flex-shrink: 0;
+}
+
+/* mobile styles */
+@media (max-width: 1024px) {
+    .main-page {
+        flex-direction: column;
+        padding: 10px;
+    }
+    
+    .text-container {
+        width: 100%;
+        height: auto;
+        padding-bottom: 10px;
+    }
+    
+    .photo-container {
+        width: 100%;
+        height: auto;
+    }
+    
+    .img {
+        width: 100%;
+        object-fit: contain;
+    }
+    
+    .top-right, .middle-right, .bottom-right {
+   
+        width: 100%;
+        flex: none;
+    }
+    
+    .top-right, .middle-right {
+        text-align: right;
+        font-size: 1em;
+    }
+    
+    .bottom-right {
+        font-size: 0.75em;
+    }
+    
 }
