--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,11 +44,12 @@ body {
 }
 
 /* mobile styles */
-@media (max-width: 1023px) {
+@media (max-width: 1024px) {
     .text-container {
         width: 90%;
         max-width: 600px;
         padding: 20px;
+        justify-content: center;
     }
     
     .top-right {
