--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body, html {
-    background-color: #C80505;
+    background-color: white;
     margin: 0;
     height: 100%;
     width: 100%;
@@ -36,7 +36,7 @@ body {
     justify-content: center;
     text-align: left;
     align-self: center;
-    color:white;
+    color:#FE7631;
     letter-spacing: 0.01em;
     font-size: 1.75em;
     font-weight: 700;
